moving search box to center